--- a/paper-review/report.tex
+++ b/paper-review/report.tex
@@ -9,6 +9,9 @@
 \usepackage{booktabs}
 \usepackage{multirow}
 \usepackage{hyperref}
+\usepackage[english]{babel}
+\usepackage[autostyle, english = american]{csquotes}
+\MakeOuterQuote{"}
 
 \title{
     \rule{\textwidth}{2pt}
